--- a/src/main.css
+++ b/src/main.css
@@ -234,6 +234,7 @@ table.fc-header {
 	}
 
 .fc-content .fc-not-in-interval {
-    background: #eee;
+	opacity: 0.5;
+    background-color: #ccc !important; 
 }
-	
+
