moved getIntervalClass to View

--- a/src/main.css
+++ b/src/main.css
@@ -233,6 +233,11 @@ table.fc-header {
 	overflow: hidden;
 	}
 
+.fc-content .fc-partly-in-interval {
+	opacity: 0.5;
+    background-color: #eee !important; 
+}
+
 .fc-content .fc-not-in-interval {
 	opacity: 0.5;
     background-color: #ccc !important; 
